leveraging buildUrl method in combination with avoidExternalConnections to replace placeholders in the provided url